--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
- <!DOCTYPE html>
+   
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Chat</title>
+  <title>Sesión</title>
   <script
-    src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js">
+    src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
     </script>
   <script
-    src="https://www.gstatic.com/firebasejs/8.5.0/firebase-auth.js">
+    src="https://www.gstatic.com/firebasejs/8.2.3/firebase-auth.js">
     </script>
   <script
-    src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js">
+    src="https://www.gstatic.com/firebasejs/8.2.3/firebase-firestore.js">
     </script>
   <script src="js/init.js">
   </script>
@@ -30,29 +31,44 @@
     href="css/estilos.css">
 </head>
 <body>
-  <mi-nav></mi-nav>
   <form name="forma">
+    <mi-nav></mi-nav>
     <header>
-      <h1>Chat</h1>
+      <h1>Sesión</h1>
       <div class="herramientas">
-        <input name="texto"
-          required
-          placeholder="Mensaje">
-        <button>Enviar</button>
+        <button
+          type="button"
+          name="terminarSesión">
+          Terminar Sesión
+        </button>
       </div>
     </header>
-    <ul id="lista" class="lista">
-      <li>
-        <mi-progreso>
-        </mi-progreso>
-      </li>
-    </ul>
+    <figure>
+      <img id="avatar" src=""
+        alt="Avatar">
+    </figure>
+    <p>
+      <label>
+        Chat
+        <output name="email">
+          <mi-progreso>
+          </mi-progreso>
+        </output>
+      </label>
+    </p>
+    <p>
+      <label>
+        Alumno
+        <output name="nombre">
+          <mi-progreso>
+          </mi-progreso>
+        </output>
+      </label>
+    </p>
     <mi-footer></mi-footer>
   </form>
   <script type="module"
-    src="js/CtrlChat.js">
+    src="js/CtrlSesion.js">
     </script>
 </body>
 </html>
-    
-
